Add UserStory Java classes and update pom.xml